--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: build openwrt
 on:
   push:
+    branches:
+      - main
     tags: [ 'v*' ]
   pull_request:
 
@@ -71,7 +73,7 @@ jobs:
       
       - name: Upload package to GitHub Release
         uses: svenstaro/upload-release-action@v2
-        # if: "startsWith(github.ref, 'refs/tags/')"
+        if: "startsWith(github.ref, 'refs/tags/')"
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file_glob: true
