--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
 name: build openwrt
-on:
-  push:
-    branches:
-      - main
-    tags: [ 'v*' ]
-  pull_request:
+# on:
+  # push:
+  #   branches:
+  #     - main
+  #   tags: [ 'v*' ]
+  # pull_request:
 
 jobs:
   build-ipk:
