--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -53,7 +53,7 @@ jobs:
       - name: prepare 
         run: |
           wget https://codeload.github.com/omniedgeio/omniedge/tar.gz/v0.2.4?
-          HASH_256=$(sh -c 'sha256sum < "$1" | cut -d" " -f1' -- omniedge-v0.2.4.tar.gz)
+          HASH_256=$(sh -c 'sha256sum < "$1" | cut -d" " -f1' -- ./omniedge-v0.2.4.tar.gz)
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
