--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         target:
           - arch: "amd64"
-            sdk: "https://downloads.openwrt.org/releases/22.03.0-rc5/targets/rockchip/armv8/openwrt-sdk-22.03.0-rc5-rockchip-armv8_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
+            sdk: "https://downloads.openwrt.org/releases/22.03.0-rc5/targets/x86/64/openwrt-sdk-22.03.0-rc5-x86-64_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout with tag
