--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -40,6 +40,13 @@ jobs:
           xz -q -d openwrt-sdk.tar.xz && tar -xvf openwrt-sdk.tar
           mv -f openwrt-sdk-* openwrt-sdk
 
+      - name: prepare for makefile
+        run: |
+          wget -O omniedge.tar.gz https://codeload.github.com/omniedgeio/omniedge/tar.gz/v0.2.4?
+          echo "OMNIEDGE_VERSION=v0.2.4" >> $GITHUB_ENV
+          echo "ARCH=${{ matrix.target.arch }}" >> $GITHUB_ENV
+          echo "HASH256=$(sh -c 'sha256sum < "$1" | cut -d" " -f1' -- omniedge.tar.gz)" >> $GITHUB_ENV
+
       - name: Build Package
         run: |
           echo "src-link omniedge $GITHUB_WORKSPACE" > openwrt-sdk/feeds.conf
