fix missing zip file error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,10 +47,9 @@ jobs:
           build=$(echo $tag | sed 's/^v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)$/\4/')
           echo "Parsed tag: major=$major, minor=$minor, patch=$patch, build=$build"
           version=$major.$minor.$patch
+          echo "version=$major.$minor.$patch" >> $GITHUB_ENV
           wget https://github.com/omniedgeio/omniedge/releases/download/v$version/omniedge-v$version-openwrt-${{ matrix.target.arch }}.zip
-      - name: prepare for makefile
-        run: |
-          echo "version=$major.$minor.$patch"
+      
           HASH256=$(sh -c 'sha256sum < "$1" | cut -d" " -f1' -- omniedge-v$version-openwrt-${{ matrix.target.arch }}.zip)
           echo "HASH256: $HASH256"
           echo "OMNIEDGE_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
