--- a/.github/workflows/auto-upgrade-cli.yml
+++ b/.github/workflows/auto-upgrade-cli.yml
@@ -10,12 +10,14 @@ on:
         required: true
 
 jobs:
-  upgrade-cli:
-    name: Upgrade OmniEdge CLI version
+  upgrade-and-release:
+    name: Upgrade CLI and Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get version
         id: version
@@ -34,7 +36,6 @@ jobs:
           if grep -q "Latest version:" README.md; then
             sed -i "s/Latest version: .*/Latest version: ${VERSION}/" README.md
           else
-            # Add version line after title
             sed -i "1a\\\\n> Latest version: ${VERSION}" README.md
           fi
           
@@ -45,26 +46,17 @@ jobs:
           
           echo "Updated to version ${VERSION}"
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore: upgrade omniedge-cli to v${{ steps.version.outputs.version }}"
-          title: "🔄 Upgrade OmniEdge CLI to v${{ steps.version.outputs.version }}"
-          body: |
-            ## Automated CLI Upgrade
+      - name: Commit and push changes
+        run: |
+          VERSION="${{ steps.version.outputs.version }}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "chore: upgrade omniedge-cli to v${VERSION}" || echo "No changes to commit"
+          git push origin main
 
-            This PR was automatically created by the CLI release workflow.
-
-            **Changes:**
-            - Updated `README.md` with new version
-            - Updated `Makefile` CLI_VERSION (if applicable)
-
-            **CLI Release:** https://github.com/omniedgeio/omniedge-cli/releases/tag/v${{ steps.version.outputs.version }}
-            
-            **Note:** After merging, build and test the OpenWrt package with the new CLI version.
-          branch: auto-upgrade/cli-v${{ steps.version.outputs.version }}
-          base: main
-          labels: |
-            automated
-            dependency-update
+      - name: Create and push tag
+        run: |
+          VERSION="${{ steps.version.outputs.version }}"
+          git tag -a "v${VERSION}" -m "Release v${VERSION} - Auto-upgraded from omniedge-cli"
+          git push origin "v${VERSION}"
