fix: correct binary installation path in Makefile

--- a/omniedge/Makefile
+++ b/omniedge/Makefile
@@ -43,7 +43,7 @@ endef
 
 define Package/omniedge/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(CP) $(BUILD_DIR)/omniedge $(1)/usr/bin/omniedge
+	$(CP) $(PKG_BUILD_DIR)/omniedge $(1)/usr/bin/omniedge
 
 	$(INSTALL_DIR) $(1)/etc/init.d/
 	$(CP) $(CURDIR)/files/omniedge.init $(1)/etc/init.d/omniedge
